# NetDisk

./: .gitignore
NetDiskApiMicroservice/: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
NetDiskApiMicroservice/src/: __init__.py  index.py
NetDiskApiMicroservice/src/application/dtos/: file_dtos.py  files.py  folders.py  resources.py
NetDiskApiMicroservice/src/application/exceptions/: files.py  folders.py  resources.py
NetDiskApiMicroservice/src/application/usecases/: base.py
NetDiskApiMicroservice/src/domain/: consts.py
NetDiskApiMicroservice/src/domain/entities/: base.py  base_entity.py  cart.py  cart_entity.py  file.py  file_entity.py  folder.py  folder_entity.py  resource.py  resource_entity.py
NetDiskApiMicroservice/src/domain/exceptions/: base.py  folders.py  resource_exceptions.py  resources.py
NetDiskApiMicroservice/src/domain/factories/: base.py  base_factory.py  file_factory.py  files.py  folder_factory.py  folders.py
NetDiskApiMicroservice/src/domain/repositories/: base.py  base_repository.py  cart_repository.py  carts.py  file_repository.py  files.py  folder_repository.py  folders.py  resources.py  unit_of_work.py
NetDiskApiMicroservice/src/domain/values/: base.py  (+3 more)
NetDiskApiMicroservice/src/setup/: app_factory.py  config.py  ioc_container.py  settings.py
NetDiskApiMicroservice/test/: conftest.py
NetDiskApiMicroservice/test/application/: test_file_usecases.py
NetDiskApiMicroservice/test/domain/: test_folder_entity.py
NetDiskApiMicroservice/test/mocks/: file_repository.py  resource_repository.py
(+230 files in other folders)
