[tool.poetry]
name = "netdiskapimicroservice"
version = "0.1.0"
description = ""
authors = ["Andrey <ykt_andrey@mail.ru>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


injector = "^0.21.0"
django-environ = "^0.11.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

pytest = "^8.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
server = "src.index:run_uvicorn_server"
